Added initial file upload code

--- a/IDS-NSL-KDD-RandomForest.ipynb
+++ b/IDS-NSL-KDD-RandomForest.ipynb
@@ -2,9 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
+   "id": "e19dc426-536f-4acf-9172-dc2818df06f5",
+   "metadata": {
+    "editable": true,
+    "papermill": {
+     "duration": 0.087578,
+     "end_time": "2025-03-11T02:23:15.911819",
+     "exception": false,
+     "start_time": "2025-03-11T02:23:15.824241",
+     "status": "completed"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5771c44108774c9e891a3ab37433b726",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FileUpload(value=(), accept='.csv', description='Title'),))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FileUpload(value=(), accept='.csv', description='Title')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "# from ipywidgets import FileUpload\n",
+    "# upload = FileUpload(accept='.csv', multiple=False) # Example: restrict to CSV and single file\n",
+    "# display(upload)\n",
+    "# After a file is uploaded, access its data:\n",
+    "# if upload.value:\n",
+    "#     uploaded_file_data = upload.value[0]['content']\n",
+    "\n",
+    "# from IPython.display import display\n",
+    "\n",
+    "# uploader = FileUpload(\n",
+    "#     accept='.txt,.csv',  # Accepted file types\n",
+    "#     multiple=False  # Allow multiple files\n",
+    "# )\n",
+    "# display(uploader)\n",
+    "\n",
+    "file = FileUpload(\n",
+    "    description= 'Title',\n",
+    "    accept='.csv',\n",
+    "    multiple=False,\n",
+    ")\n",
+    "box = widgets.HBox([file])\n",
+    "display(box)\n",
+    "\n",
+    "# New Cell\n",
+    "\n",
+    "print(str(file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "f6890782-8d59-4de6-9186-62821ec7a326",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -555,7 +641,7 @@
        "level                         20.00   21.00  2.100000e+01  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
