Added install statements for jupyterlite; Updated filepaths and FileUpload

--- a/content/IDS-NSL-KDD-RandomForest.ipynb
+++ b/content/IDS-NSL-KDD-RandomForest.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c1a2e9b4-df03-495f-83de-f2218a54fe10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports for JupyterLite\n",
+    "%pip install -q ipywidgets\n",
+    "%pip install -q seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "e19dc426-536f-4acf-9172-dc2818df06f5",
    "metadata": {
@@ -66,17 +78,17 @@
     "# )\n",
     "# display(uploader)\n",
     "\n",
-    "file = FileUpload(\n",
-    "    description= 'Title',\n",
-    "    accept='.csv',\n",
+    "file = widgets.FileUpload(\n",
+    "    description= 'Upload NSL-KDD file',\n",
+    "    accept='.txt,.csv',\n",
     "    multiple=False,\n",
     ")\n",
     "box = widgets.HBox([file])\n",
-    "display(box)\n",
+    "display(file)\n",
     "\n",
     "# New Cell\n",
     "\n",
-    "print(str(file))"
+    "# print(str(file))"
    ]
   },
   {
