Updated upload functionality: create/read; Added testing csv to data folder

--- a/content/IDS-NSL-KDD-RandomForest.ipynb
+++ b/content/IDS-NSL-KDD-RandomForest.ipynb
@@ -83,12 +83,36 @@
     "    accept='.txt,.csv',\n",
     "    multiple=False,\n",
     ")\n",
-    "box = widgets.HBox([file])\n",
+    "# box = widgets.HBox([file])\n",
+    "file\n",
     "display(file)\n",
     "\n",
     "# New Cell\n",
     "\n",
     "# print(str(file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8846a1b1-3945-4c31-bc1e-e633565c4bf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(file.value)\n",
+    "# print(file.content)\n",
+    "file = file.value[0]\n",
+    "test1 = pd.read_csv(\"./input.txt\")\n",
+    "\n",
+    "# file.content.tobytes()\n",
+    "\n",
+    "# Create file\n",
+    "# with open(\"./input.txt\", \"wb\") as fp:\n",
+    "#     fp.write(file.content)\n",
+    "    \n",
+    "# test1 = pd.read_csv(\"./input.txt\")\n",
+    "\n",
+    "test1.head(5)"
    ]
   },
   {
