Added local data selector; Need to pass data

--- a/content/IDS-NSL-KDD-RandomForest.ipynb
+++ b/content/IDS-NSL-KDD-RandomForest.ipynb
@@ -94,10 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8846a1b1-3945-4c31-bc1e-e633565c4bf0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'file' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfile\u001b[49m\u001b[38;5;241m.\u001b[39mvalue)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# print(file.content)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m file \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mvalue[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'file' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(file.value)\n",
     "# print(file.content)\n",
@@ -113,6 +125,67 @@
     "# test1 = pd.read_csv(\"./input.txt\")\n",
     "\n",
     "test1.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "32b9138f-eaad-4b79-8adc-415b13c44001",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contents of the folder: ['KDDTest+.arff', 'KDDTest-21.arff', 'KDDTrain+_20Percent.arff', 'KDDTest+.txt', 'KDDTrain+.arff', 'README.md', 'test-csv.txt', 'KDDTest-21.txt', 'KDDTrain+.txt', 'KDDTrain+_20Percent.txt']\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af398dfca5b3468a98458d6c5a5d5733",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Dataset: ', options=('KDDTest+.arff', 'KDDTest-21.arff', 'KDDTrain+_20Percent.arff', 'KD…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "folder_list = os.listdir(\"./data/NSL-KDD-Dataset\") # Replace with the actual path\n",
+    "print(f\"Contents of the folder: {folder_list}\")\n",
+    "\n",
+    "db_list = widgets.Dropdown(\n",
+    "    options=folder_list,\n",
+    "    value=folder_list[0],\n",
+    "    description='Dataset: ',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Define the callback function to log the selection\n",
+    "def on_dropdown_change(change):\n",
+    "    if change['name'] == 'value':  # Ensure the change is for the 'value' attribute\n",
+    "        print(f\"Selected: {change['new']}\")\n",
+    "        path_string = f\"./data/NSL-KDD-Dataset/{change['new']}\"\n",
+    "\n",
+    "        test2=pd.read_csv(path_string)\n",
+    "        print(path_string)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Attach the callback function to the dropdown's value changes\n",
+    "db_list.observe(on_dropdown_change, names='value')\n",
+    "\n",
+    "display(db_list)\n"
    ]
   },
   {
