Updated local data selector to pass data and read local data file

--- a/content/IDS-NSL-KDD-RandomForest.ipynb
+++ b/content/IDS-NSL-KDD-RandomForest.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "32b9138f-eaad-4b79-8adc-415b13c44001",
    "metadata": {},
    "outputs": [
@@ -143,12 +143,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af398dfca5b3468a98458d6c5a5d5733",
+       "model_id": "d9f6898f784641a5abcc6b80511ea4a8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Dropdown(description='Dataset: ', options=('KDDTest+.arff', 'KDDTest-21.arff', 'KDDTrain+_20Percent.arff', 'KD…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8064bf05a254f7492246cc141929f37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Click me', icon='check', style=ButtonStyle(), tooltip='Click me')"
       ]
      },
      "metadata": {},
@@ -168,24 +182,97 @@
     "    value=folder_list[0],\n",
     "    description='Dataset: ',\n",
     "    disabled=False,\n",
+    "\n",
     ")\n",
+    "\n",
+    "test2=pd.DataFrame()\n",
+    "\n",
     "\n",
     "\n",
     "# Define the callback function to log the selection\n",
     "def on_dropdown_change(change):\n",
+    "    global test2\n",
     "    if change['name'] == 'value':  # Ensure the change is for the 'value' attribute\n",
-    "        print(f\"Selected: {change['new']}\")\n",
-    "        path_string = f\"./data/NSL-KDD-Dataset/{change['new']}\"\n",
-    "\n",
+    "        path_string = f\"./data/NSL-KDD-Dataset/{db_list.value}\"\n",
     "        test2=pd.read_csv(path_string)\n",
-    "        print(path_string)\n",
+    "        print(f\"Selected: {change['new']}\")\n",
+    "        print('value', db_list.value)\n",
+    "        print('UPDATED path_string',path_string)\n",
     "\n",
     "\n",
+    "\n",
+    "button = widgets.Button(\n",
+    "    description='Click me',\n",
+    "    disabled=False,\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Click me',\n",
+    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def button_change(change):\n",
+    "    \n",
+    "    print('test2',test2)\n",
+    "\n",
+    "    with output_widget:\n",
+    "        clear_output()  # Clear previous output\n",
+    "        print(f\"The variable value is: {test2}\")\n",
+    "    \n",
+    "button\n",
     "\n",
     "# Attach the callback function to the dropdown's value changes\n",
     "db_list.observe(on_dropdown_change, names='value')\n",
     "\n",
-    "display(db_list)\n"
+    "button.on_click(button_change)\n",
+    "\n",
+    "\n",
+    "display(db_list)\n",
+    "display(button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "52fcd589-7490-4e97-a669-f6bda49eaf80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       0   tcp   private   REJ    0.1    0.2  0.3  0.4  0.5  0.6  ...  0.04.1  \\\n",
+      "0      0   tcp   private   REJ      0      0    0    0    0    0  ...    0.00   \n",
+      "1      2   tcp  ftp_data    SF  12983      0    0    0    0    0  ...    0.61   \n",
+      "2      0  icmp     eco_i    SF     20      0    0    0    0    0  ...    1.00   \n",
+      "3      1   tcp    telnet  RSTO      0     15    0    0    0    0  ...    0.31   \n",
+      "4      0   tcp      http    SF    267  14515    0    0    0    0  ...    1.00   \n",
+      "...   ..   ...       ...   ...    ...    ...  ...  ...  ...  ...  ...     ...   \n",
+      "22538  0   tcp      smtp    SF    794    333    0    0    0    0  ...    0.72   \n",
+      "22539  0   tcp      http    SF    317    938    0    0    0    0  ...    1.00   \n",
+      "22540  0   tcp      http    SF  54540   8314    0    0    0    2  ...    1.00   \n",
+      "22541  0   udp  domain_u    SF     42     42    0    0    0    0  ...    0.99   \n",
+      "22542  0   tcp    sunrpc   REJ      0      0    0    0    0    0  ...    0.08   \n",
+      "\n",
+      "       0.06.1  0.00.3  0.00.4  0.00.5  0.00.6  1.00.2  1.00.3  neptune  21  \n",
+      "0        0.06    0.00    0.00    0.00     0.0    1.00    1.00  neptune  21  \n",
+      "1        0.04    0.61    0.02    0.00     0.0    0.00    0.00   normal  21  \n",
+      "2        0.00    1.00    0.28    0.00     0.0    0.00    0.00    saint  15  \n",
+      "3        0.17    0.03    0.02    0.00     0.0    0.83    0.71    mscan  11  \n",
+      "4        0.00    0.01    0.03    0.01     0.0    0.00    0.00   normal  21  \n",
+      "...       ...     ...     ...     ...     ...     ...     ...      ...  ..  \n",
+      "22538    0.06    0.01    0.01    0.01     0.0    0.00    0.00   normal  21  \n",
+      "22539    0.00    0.01    0.01    0.01     0.0    0.00    0.00   normal  21  \n",
+      "22540    0.00    0.00    0.00    0.00     0.0    0.07    0.07     back  15  \n",
+      "22541    0.01    0.00    0.00    0.00     0.0    0.00    0.00   normal  21  \n",
+      "22542    0.03    0.00    0.00    0.00     0.0    0.44    1.00    mscan  14  \n",
+      "\n",
+      "[22543 rows x 43 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test2)"
    ]
   },
   {
